# hermes-memory-os

./: .dockerignore  .env.example  .gitignore  Dockerfile.http  README.md  hermes-plugin.yaml  pyproject.toml
config/: hermes-agent-dev.example.yml  hermes-agent-prod.example.yml  hermes-memory-os.docker.semantic.yml  hermes-memory-os.example.yml  hermes-memory-os.prod.yml
deploy/systemd/: README.md  hermes-memory-http.service
docs/: architecture.md  handoff-2026-06-09.md  hermes-development.md  live-smoke.md  next-session-handoff.md
memory-specs/: IMPLEMENTATION-NOTES.md  hermes-memory-os.md  hermes_local_memory_spec_kit_spec.md  obsidian-memory-systems.md
scripts/: hermes-memory-http-health.sh  hermes-memory-http-start.sh  hermes-memory-http-stop.sh  spark-smoke.sh
specs/001-hermes-memory-os/: spec.md
specs/002-semantic-retrieval-and-workflows/: plan.md  spec.md  tasks.md
src/hermes_memory_os/: __init__.py  app.py  chief.py  cli.py  config.py  embeddings.py  errors.py  hermes_plugin.py  http_api.py  http_models.py  qdrant.py  safety.py  semantic.py  utils.py
src/hermes_memory_os/db/: connection.py  schema.py  store.py
src/hermes_memory_os/ingest/: markdown.py  sources.py
src/hermes_memory_os/provider/: __init__.py  adapter.py
src/hermes_memory_os/retrieval/: ranker.py  retriever.py
tests/: test_chief.py  test_cli.py  test_config.py  test_http_api.py  test_http_models.py  test_http_safety.py  test_hybrid_retrieval.py  test_ingest_search.py  test_long_form_ingest.py  test_provider.py  test_qdrant.py  test_semantic_indexing.py  test_store.py
