[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-memory-os"
version = "0.1.0"
description = "Local-first durable memory substrate for Hermes and clients such as Reachy."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "requests>=2.31",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]
qdrant = [
  "qdrant-client>=1.9",
]

[project.scripts]
hermes-memory = "hermes_memory_os.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
